--- a/G/CSS/S.css
+++ b/G/CSS/S.css
@@ -77,9 +77,11 @@ input.text{
   padding: .5em .6em;
   border: 0;
   outline:none;
-  background: rgba(250,250,250,1);
   border-bottom: 2px solid #444;
   color: #43454A;
+}
+#backup{
+  background: #fff;
 }
 .Data-backup{
   margin:30px 0px;
